--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
+    
+<style>
+    @media only screen and (max-width:481px) {
+        .media1 {
+            width: 80vw;
+        }
+    }
+</style>
 
 <body><img class="auto-height z-1 absolute-pos auto-height" src="assets/img/Design%20by.png" style="top: 1.6vw;left: 20vw;width: 3vw;"><img class="bounce animated auto-height z-1 absolute-pos auto-height" src="assets/img/KERBER.png" style="width: 7vw;top: 3vw;left: 20vw;">
     <img
         data-bs-hover-animate="flash" class="auto-height z-1 absolute-pos auto-height" src="assets/img/Портфолио.png" style="width: 7vw;left: 65vw;top: 3vw;"><img data-bs-hover-animate="flash" class="auto-height z-1 absolute-pos auto-height" src="assets/img/Контакты.png" style="width: 6vw;left: 74.6vw;top: 3vw;"><img class="auto-height absolute-pos" src="assets/img/Rectangle_header.png" style="width: 100vw;"><img data-bs-hover-animate="pulse"
             class="auto-height absolute-pos z-1" src="assets/img/01.png" style="top: 8vw;width: 9vw;left: 20vw;"><img class="auto-height absolute-pos z-1" src="assets/img/главная%20страница.png" style="top: 15.7vw;left: 20vw;width: 28vw;"><img data-bs-hover-animate="pulse"
-            class="z-1 absolute-pos auto-height" src="assets/img/DESIGN%20BY%20KERBER.png" style="width: 3vw;top: 10vw;left: 77vw;"><img class="auto-height absolute-pos z-1" src="assets/img/the%20main%20page.png" style="left: 20vw;top: 20.5vw;width: 10vw;"><img class="auto-height absolute-pos shadow-main z-1 media1"
+            class="z-1 absolute-pos auto-height media1" src="assets/img/DESIGN%20BY%20KERBER.png" style="width: 3vw;top: 10vw;left: 77vw;"><img class="auto-height absolute-pos z-1" src="assets/img/the%20main%20page.png" style="left: 20vw;top: 20.5vw;width: 10vw;"><img class="auto-height absolute-pos shadow-main z-1 media1"
             src="assets/img/Главная.png" style="width: 60vw;position: absolute;left: 20vw;top: 23vw;"><img data-bs-hover-animate="pulse" class="auto-height z-2 absolute-pos filter-shadow" src="assets/img/фрейм.png" style="top: 35vw;width: 9vw;left: 76vw;"><img data-bs-hover-animate="pulse"
             class="absolute-pos z-1 auto-height filter-shadow" src="assets/img/фрейм2.png" style="width: 9vw;left: 15vw;top: 93vw;"><img data-bs-hover-animate="pulse" class="absolute-pos z-1 auto-height filter-shadow" src="assets/img/фрейм3.png" style="top: 143vw;width: 9vw;left: 76vw;">
         <img
